# c-Practices

./: .gitignore  README.md
hello_world/: CMakeLists.txt  main.cpp
